--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ greenlet==3.2.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+psycopg2==2.9.10
 SQLAlchemy==2.0.42
 typing_extensions==4.14.1
 Werkzeug==3.1.3
